force-app/main/default/objects/Marketing_Channel__c/Marketing_Channel__c.object-meta.xml
<CustomObject>
    <label>Marketing Channel</label>
    <nameField>
        <label>Marketing Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Channels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>