force-app/main/default/objects/Marketing_Channel__c/fields/Budget_Allotted__c.field-meta.xml
<CustomField>
    <fullName>Budget_Allotted__c</fullName>
    <label>Budget Allotted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>