force-app/main/default/objects/Marketing_Channel__c/fields/Cost_Per_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Enquiry__c</fullName>
    <label>Cost Per Enquiry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>