force-app/main/default/objects/Marketing_Channel__c/fields/Marketing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Plan__c</fullName>
    <label>Marketing Plan</label>
    <referenceTo>Marketing_Plan__c</referenceTo>
    <relationshipLabel>Marketing Channels</relationshipLabel>
    <relationshipName>Marketing_Channels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>