force-app/main/default/objects/Marketing_Channel__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Property Portal</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>SEO/SEM</fullName>
            </value>
            <value>
                <fullName>Print Media</fullName>
            </value>
            <value>
                <fullName>Broadcast Media</fullName>
            </value>
            <value>
                <fullName>Outdoor Display</fullName>
            </value>
            <value>
                <fullName>Exhibit</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>BTL</fullName>
                <isActive>false</isActive>
                <label>BTL</label>
            </value>
            <value>
                <fullName>Digital Media</fullName>
                <isActive>false</isActive>
                <label>Digital Media</label>
            </value>
            <value>
                <fullName>Exhibition</fullName>
                <isActive>false</isActive>
                <label>Exhibition</label>
            </value>
            <value>
                <fullName>Non-Lead Generation</fullName>
                <isActive>false</isActive>
                <label>Non-Lead Generation</label>
            </value>
            <value>
                <fullName>OOH</fullName>
                <isActive>false</isActive>
                <label>OOH</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
                <isActive>false</isActive>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Property consultant</fullName>
                <isActive>false</isActive>
                <label>Property consultant</label>
            </value>
            <value>
                <fullName>Radio</fullName>
                <isActive>false</isActive>
                <label>Radio</label>
            </value>
            <value>
                <fullName>Reference</fullName>
                <isActive>false</isActive>
                <label>Reference</label>
            </value>
            <value>
                <fullName>TV</fullName>
                <isActive>false</isActive>
                <label>TV</label>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
                <isActive>false</isActive>
                <label>Telemarketing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>