force-app/main/default/objects/Marketing_Channel__c/fields/Total_Booking_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Count__c</fullName>
    <label>Total Booking Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>