force-app/main/default/objects/Marketing_Channel__c/fields/Total_Enquiry_Assigned_to_sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Enquiry_Assigned_to_sales__c</fullName>
    <label>Total Enquiry Assigned to sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>