force-app/main/default/objects/Marketing_Channel__c/fields/Total_Offer_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Offer_Count__c</fullName>
    <label>Total Offer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>