force-app/main/default/objects/Marketing_Channel__c/validationRules/Budget_Utilization_Till_Date_not_exceed.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Utilization_Till_Date_not_exceed</fullName>
    <active>true</active>
    <description>Budget Utilization Till Date can&apos;t be greater than Budget Allotted</description>
    <errorConditionFormula>Budget_Utilization_Till_Date__c &gt; Budget_Allotted__c</errorConditionFormula>
    <errorMessage>Budget Utilization Till Date can&apos;t be greater than Budget Allotted</errorMessage>
</ValidationRule>