force-app/main/default/objects/Marketing_Channel__c/validationRules/Marketing_Plan_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Marketing_Plan_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    OR(
        TEXT(Marketing_Plan__r.Approval_Status__c) = &apos;Rejected&apos;,
        TEXT(Marketing_Plan__r.Approval_Status__c) = &apos;Submit for Approval&apos;
    )
)</errorConditionFormula>
    <errorMessage>Associated Marketing Plan Is Either Rejected or Pending For approval, Hence New Marketing Channel Can Not Be Created</errorMessage>
</ValidationRule>