force-app/main/default/objects/Marketing_Channel__c/validationRules/Start_date_less_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_less_than_End_Date</fullName>
    <active>true</active>
    <description>End Date can&apos;t be less than Start Date</description>
    <errorConditionFormula>End_Date__c &lt;=Start_Date__c</errorConditionFormula>
    <errorMessage>End Date can&apos;t be less than Start Date</errorMessage>
</ValidationRule>